Emacspeak News --History Of User-Visible Changes
$Id$
Author: T. V. Raman <tv.raman.tv@gmail.com>

* Emacspeak 41 -- Emacspeak 40 User Visible Changes 


* Emacspeak And Company

Module [[http://emacspeak.blogspot.com/2014/05/emacspeak-and-company-complete-anything.html][Emacspeak-Company]] adds a Complete-Anything front-end for
emacspeak.

# local variables:
# mode: org
# end: