@@ -56,7 +56,15 @@
  '(
    (flycheck-warning voice-animate)
    (flycheck-error voice-bolden)
-   (flycheck-info voice-monotone)))
+   (flycheck-info voice-monotone)
+   (flycheck-error-list-highlight-at-point voice-bolden-extra)
+   (flycheck-error-list-highlight voice-bolden-medium)
+   (flycheck-error-list-highlightflycheck-error-list-column-number voice-lighten)
+   (flycheck-error-list-line-number voice-lighten)
+   (flycheck-error-list-info voice-monotone)
+   (flycheck-error-list-warning voice-animate)
+   (flycheck-error-list-error voice-bolden)))
+
 ;;}}}
 ;;{{{ Advice interactive commands.
 (loop
